--- a/src/goodboy/locale/en/LC_MESSAGES/goodboy.po
+++ b/src/goodboy/locale/en/LC_MESSAGES/goodboy.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2021-08-26 13:54+0700\n"
+"POT-Creation-Date: 2021-12-02 20:26+0700\n"
 "PO-Revision-Date: 2021-08-26 12:06+0700\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -18,6 +18,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
 
-#: src/goodboy/__init__.py:8
-msgid "hello world"
-msgstr "hello world"
+#: src/goodboy/errors.py:64
+msgid "Cannot be None"
+msgstr "Cannot be None"
+
+#: src/goodboy/errors.py:64
+msgid "Cannot be null"
+msgstr "Cannot be null"
+
+#: src/goodboy/errors.py:65
+msgid "Should be '{type}' type"
+msgstr "Should be '{type}' type"
