--- a/src/goodboy/locale/ru/LC_MESSAGES/goodboy.po
+++ b/src/goodboy/locale/ru/LC_MESSAGES/goodboy.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2021-12-02 20:26+0700\n"
+"POT-Creation-Date: 2021-12-03 19:24+0700\n"
 "PO-Revision-Date: 2021-08-26 11:51+0700\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: ru\n"
@@ -19,14 +19,95 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
 
-#: src/goodboy/errors.py:64
-msgid "Cannot be None"
-msgstr "Не может быть None"
+#: src/goodboy/errors.py:68
+msgid "cannot be None"
+msgstr "не может быть None"
 
-#: src/goodboy/errors.py:64
-msgid "Cannot be null"
-msgstr "Не может быть null"
+#: src/goodboy/errors.py:68
+msgid "cannot be null"
+msgstr "не может быть null"
 
-#: src/goodboy/errors.py:65
-msgid "Should be '{type}' type"
-msgstr "Требуется тип '{type}'"
+#: src/goodboy/errors.py:69
+msgid "cannot be blank"
+msgstr "не может быть пустым"
+
+#: src/goodboy/errors.py:70
+msgid "expected type is \"{type}\""
+msgstr "ожидается тип \"{type}\""
+
+#: src/goodboy/errors.py:72
+msgid "must be later than {value}"
+msgstr "должно быть позже {value}"
+
+#: src/goodboy/errors.py:73
+msgid "must be later or equal to {value}"
+msgstr "должно быть позже либо равно {value}"
+
+#: src/goodboy/errors.py:74
+msgid "must be earlier than {value}"
+msgstr "должно быть раньше {value}"
+
+#: src/goodboy/errors.py:75
+msgid "must be earlier or equal to {value}"
+msgstr "должно быть раньше или равно {value}"
+
+#: src/goodboy/errors.py:76
+msgid "invalid date format"
+msgstr "неверный формат даты"
+
+#: src/goodboy/errors.py:77
+msgid "invalid date and time format"
+msgstr "неверный формат даты и времени"
+
+#: src/goodboy/errors.py:79
+msgid "must be less than {value}"
+msgstr "должно быть меньше {value}"
+
+#: src/goodboy/errors.py:80
+msgid "must be less or equal to {value}"
+msgstr "должно быть меньше или равно {value}"
+
+#: src/goodboy/errors.py:81
+msgid "must be greater than {value}"
+msgstr "должно быть больше {value}"
+
+#: src/goodboy/errors.py:82
+msgid "must be greater or equal to {value}"
+msgstr "должно быть больше либо равно {value}"
+
+#: src/goodboy/errors.py:83
+msgid "invalid integer format"
+msgstr "не является целым числом"
+
+#: src/goodboy/errors.py:84
+msgid "invalid numeric format"
+msgstr "не является числом"
+
+#: src/goodboy/errors.py:86
+msgid "invalid string format"
+msgstr "не является строкой"
+
+#: src/goodboy/errors.py:87
+msgid "must be {value} characters long"
+msgstr "неверной длины (должно быть ровно {value} символов)"
+
+#: src/goodboy/errors.py:88
+msgid "must be shorter than {value} characters"
+msgstr "должно быть короче {value} символов"
+
+#: src/goodboy/errors.py:89
+msgid "must be longer than {value} characters"
+msgstr "должно быть длинее {value} символов"
+
+#: src/goodboy/errors.py:91
+msgid "key errors"
+msgstr "ошибки в ключах"
+
+#: src/goodboy/errors.py:92
+msgid "key is required"
+msgstr "ключ обязателен"
+
+#: src/goodboy/errors.py:93
+msgid "unknown key"
+msgstr "неизвестный ключ"
+
